# collisioneer

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs  stats.rs  sweep.rs
